crates/jsonschema-macros/tests/ui/non_string_pattern_value.rs
#[jsonschema::validator(schema = r#"{"type":"string","pattern":123}"#)]
struct NonStringPatternValueValidator;

fn main() {}
